# py-pack-template

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml
tests/: test_py_pack_template.py  test_py_package_template.py
