[tool.poetry]
name = "py-pack-template"
version = "0.0.2"
description = "My Python package template"
authors = ["Paul Rinckens"]
maintainers = ["Paul Rinckens"]
homepage = "https://github.com/paulrinckens/py-pack-template"
repository = "https://github.com/paulrinckens/py-pack-template"
documentation = "https://github.com/paulrinckens/py-pack-template#readme"
license = "MIT"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.1.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
pre-commit = "^2.17.0"
pytest-cov = "^3.0.0"

[tool.isort]
profile = "black"
